@@ -1,4 +1,2 @@
 	.text
 	.long 123
-	.data
-	.long 123
